# ppk_ir

./: README.md  p4-deps.sh  p4-install.sh
P4Runtime_GRPCPP/: compile copy.sh  compile.sh  packet.pcap  packet1.pcap
P4Runtime_GRPCPP/cpp-out/gnmi/: gnmi.pb.cc  gnmi.pb.h
P4Runtime_GRPCPP/grpc-cpp-out/gnmi/: gnmi.grpc.pb.cc  gnmi.grpc.pb.h
P4Runtime_GRPCPP/inc/: device_mgr.h
P4Runtime_GRPCPP/include/utils/: map.h  table.h
P4Runtime_GRPCPP/onos/: netcfg.json
P4Runtime_GRPCPP/p4runtime_lib/: 123.json  234.json  GEO.json  client.cpp  client.py  client1.py  client2.py  clientcmd.py  convert.py  convert.py.bak  delete.json  delete.py  delete_l3.json  helper.py  insert.py  insert_l3.json  l2_clone.p4i  l3-wo.json  lookup.py  lookup.py.bak  mf.json  multi.json  multi_geo.json  multi_ipv4.json  multi_ipv6.json  multimodal_routing.json.bak  multimodal_routing.p4i  my-p4-16-prog.p4info.txt  my_controller.py  ndn.json  protfile  register-example1.json  register-example1.p4.json  register-example1.p4i  register-example1.p4info.txt  register.json  register.p4i  register.p4info.txt  requestwrie  requestwrite  (+5 more)
P4Runtime_GRPCPP/server/: async_client.cc  async_client1.cc  async_client_in.cc  async_client_out.cc  client.cc  device_mgr.c  device_mgr.h  pi_server.cc  test_server.c
P4Runtime_GRPCPP/server_tmp/: compile.sh  device_mgr.c  device_mgr.h  pi_server.cc  test_server.c
P4Runtime_GRPCPP/utils/: table.c  table.h.tmp
ppk/: README.MD  ppk.sh  ppk_en.sh  test_toJsonTime.sh
ppk/cache/: new-fenpian-cs-ndsc.p4.hlir.cached  new-fenpian-cs-ndsc.p4.json.cached
ppk/cfg/: examples.cfg  opts_dpdk.cfg
ppk/compiler/: compiler.py  lianxi.py
ppk/compiler/backend/: actions.c.py  controlplane.c.py  dataplane.c.py  parser.h.py  tables.c.py
ppk/compiler/hlir16/: hlir16_attrs.py
ppk/compiler/utils/: codegen.py  codegen.sugar.py
ppk/dpdk-Marvell-v8/config/: common_base  rte_config.h
ppk/dpdk-Marvell-v8/mk/: rte.app.mk
ppk/dpdk-stable-19.11/dpdk-pmd-1.1.0/ngbe/19.11/: meson.build
ppk/dpdk-stable-19.11/dpdk-pmd-1.1.0/ngbe/20.05/base/: meson.build
ppk/dpdk-stable-19.11/dpdk-pmd-1.1.0/txgbe/18.11/: meson.build  txgbe_ethdev_vf.c  txgbe_pf.c
ppk/dpdk-stable-19.11/dpdk-pmd-1.1.0/txgbe/18.11/base/: txgbe_mng.c
ppk/dpdk-stable-19.11/dpdk-pmd-1.1.0/txgbe/20.02/: Makefile  meson.build
ppk/dpdk-stable-19.11/drivers/crypto/rsp/: meson.build  rsp_asym.h  rsp_asym_capabilities.h  rsp_sym_capabilities.h  rsp_sym_pmd.h
ppk/dpdk-stable-19.11/drivers/net/netswift/: Makefile  meson.build
ppk/dpdk-stable-19.11/drivers/net/netswift/ngbe/16.04/: ngbe_rxtx.c
ppk/dpdk-stable-19.11/drivers/net/netswift/ngbe/16.04/base/: ngbe_phy_zte.c
ppk/dpdk-stable-19.11/drivers/net/netswift/ngbe/17.02/base/: ngbe.h  ngbe_phy_rtl.h
ppk/dpdk-stable-19.11/drivers/net/netswift/ngbe/17.05/base/: ngbe_phy_zte.h
ppk/dpdk-stable-19.11/drivers/net/netswift/ngbe/17.11/base/: meson.build
ppk/dpdk-stable-19.11/drivers/net/netswift/ngbe/18.02/base/: ngbe_osdep.h
ppk/dpdk-stable-19.11/drivers/net/netswift/ngbe/18.08/: ngbe_rxtx.c
ppk/dpdk-stable-19.11/drivers/net/netswift/ngbe/19.05/: ngbe_logs.h
ppk/dpdk-stable-19.11/drivers/net/netswift/ngbe/19.08/: meson.build  ngbe_ethdev_vf.c  ngbe_rxtx.c
ppk/dpdk-stable-19.11/drivers/net/netswift/ngbe/20.02/base/: ngbe_mbx.h
ppk/dpdk-stable-19.11/drivers/net/netswift/ngbe/20.08/: ngbe_ethdev.h
ppk/dpdk-stable-19.11/drivers/net/netswift/ngbe/20.11/: ngbe_ethdev.h  ngbe_pf.c  ngbe_rxtx.c  ngbe_rxtx.h
ppk/dpdk-stable-19.11/drivers/net/netswift/ngbe/20.11/base/: ngbe_devids.h  ngbe_regs.h
ppk/dpdk-stable-19.11/drivers/net/netswift/scripts/: dpdk-16.07.patch  dpdk-18.05.patch  dpdk-20.02.patch
ppk/dpdk-stable-19.11/drivers/net/netswift/txgbe/16.04/: txgbe_ethdev.h  txgbe_pf.c
ppk/dpdk-stable-19.11/drivers/net/netswift/txgbe/17.11/: txgbe_ipsec.c  txgbe_pf.c
ppk/dpdk-stable-19.11/drivers/net/netswift/txgbe/18.11/: txgbe_flow.c
ppk/dpdk-stable-19.11/drivers/net/netswift/txgbe/18.11/base/: txgbe_osdep.h
ppk/dpdk-stable-19.11/drivers/net/netswift/txgbe/19.11/: rte_pmd_txgbe.c  rte_pmd_txgbe_version.map  txgbe_regs_group.h
ppk/dpdk-stable-19.11/drivers/net/netswift/txgbe/19.11/base/: txgbe_devids.h  txgbe_ptypes.c  txgbe_regs.h
ppk/dpdk-stable-19.11/drivers/net/netswift/txgbe/20.02/: txgbe_ethdev_vf.c  txgbe_rxtx.c
ppk/dpdk-stable-19.11/drivers/net/netswift/txgbe/20.02/base/: txgbe_dcb_hw.c  txgbe_hw.h  txgbe_type.h
ppk/dpdk-stable-19.11/drivers/net/netswift/txgbe/20.05/base/: txgbe_eeprom.c
ppk/dpdk-stable-19.11/drivers/net/netswift/txgbe/20.08/: txgbe_ethdev.h
ppk/dpdk-stable-19.11/drivers/net/netswift/txgbe/20.08/base/: txgbe_dcb.c  txgbe_hw.h  txgbe_phy.c
ppk/dpdk-stable-19.11/drivers/net/netswift/txgbe/20.11/: txgbe_flow.c  txgbe_ipsec.c  txgbe_pf.c  txgbe_rxtx.h
ppk/dpdk-stable-19.11/drivers/net/netswift/txgbe/20.11/base/: txgbe_mbx.c  txgbe_mng.h
ppk/examples/: GEO.p4  GEO_src.p4  decrypt_payload.p4  del_vlan.p4  geo_decrypt.p4  geo_decrypt_payload.p4  geo_dst.p4  geo_encrycard.p4  geo_encrypt_payload.p4  ipv4_decrypt.p4  ipv4_encrycard.p4  l2_dst.p4  l2copy.p4  l3-ipv4.p4  lookahead.p4  main(2).p4  main.p4  main_gugan.p4  main_new.p4  main_old.p4  mf.p4  mf_4.p4  mf_counter.p4  mf_ipv4_geo.p4  mu_Ipsec.p4  mu_Ipsec2.p4  multil.p4  multimodal_routing.bk.p4  multimodal_routing.p4  multimodal_routing_no_checksum.p4  multimodal_routing_test.p4  mytunnel.p4  new-fenpian-cs-ndsc.p4  new-fenpian-cs-youhua.p4  packetin.p4  polling.p4  polymorphic.p4  weighted_polling.p4
ppk/makefiles/: common.mk
ppk_ir/: README  build.sh  send.py  set_env.sh
ppk_ir/cfg/: examples.cfg  opts_dpdk.cfg
ppk_ir/compiler/: compiler.py  compiler_load_p4.py
ppk_ir/dpdk-stable-19.11.12/drivers/net/netswift/txgbe/18.11/base/: meson.build  txgbe_eeprom.h
ppk_ir/dpdk-stable-19.11/drivers/common/rsp/: Makefile  meson.build  rpu_fw_data.c  rpu_fw_data.h  rsp_common.c  rsp_logs.c  rsp_qp.c  rsp_reg.h
ppk_ir/ir/: PPK.json  geoir.json  joker.json  joker.p4  mfir.json  ndnir.json  polymorphic.json  ppk_chaifen.json  ppk_division.json  right.json  tartargeo.p4
(+484 files in other folders)
